--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
     "nodemon": "^3.1.10",
-    "prisma": "^6.6.0"
+    "prisma": "^6.6.0",
+    "socket.io": "^4.8.1"
   }
 }
